.provarCaches/00D6C0000000xA6UAI/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Div__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Division 1</fullName>
                </value>
                <value>
                    <fullName>Division 2</fullName>
                </value>
                <value>
                    <fullName>Division 3</fullName>
                </value>
                <value>
                    <fullName>Division 5</fullName>
                </value>
                <value>
                    <fullName>Division 6</fullName>
                </value>
                <value>
                    <fullName>Division 7</fullName>
                </value>
                <value>
                    <fullName>Division 8</fullName>
                </value>
                <value>
                    <fullName>Division 10</fullName>
                </value>
                <value>
                    <fullName>National Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Event_Summary__c</fullName>
        <description>Provide information on the overall success of the Campaign as well as blockers and issues and other items that may have come up to help drive the success of future Campaigns.</description>
        <label>Post Event Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <label>Sub Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>F19_WP_LinkedIn_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>F19 WP LinkedIn Campaign</value>
        </filters>
        <label>F19 WP LinkedIn Campaign</label>
    </listViews>
    <listViews>
        <fullName>F19_WP_Trade_Shows</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>F19 WP Trade Shows</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>NRPA_2018_LAND</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>NRPA 2018</value>
        </filters>
        <label>NRPA 2018 LAND</label>
    </listViews>
    <listViews>
        <fullName>NSC_2018_LAND</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>NSC 2018</value>
        </filters>
        <label>NSC 2018 LAND</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>